Initial check in with Flink project integration into DDF build